--- a/.classpath
+++ b/.classpath
@@ -13,5 +13,6 @@
 	<classpathentry exported="true" kind="lib" path="lib/jsoup-1.8.3.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/mysql-connector-java-5.1.7-bin.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/mongo-java-driver-3.2.2.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/htmlunit-2.21-OSGi.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
